// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<OverflowWrapper /> should render 1`] = `
.c0 {
  position: relative;
  overflow: hidden;
}

.c0:before,
.c0:after {
  position: absolute;
  top: 0;
  bottom: 0;
  display: block;
  width: 4rem;
  opacity: 0;
  -webkit-transition: opacity 0.3s linear;
  transition: opacity 0.3s linear;
  content: "";
  pointer-events: none;
  background: radial-gradient( ellipse at center, #fff 15%, rgba(255,255,255,0) 80% );
}

.c0:before {
  left: -2rem;
}

.c0:after {
  right: -2rem;
}

.c1 {
  overflow-x: auto;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      Default shadow color
    </div>
  </div>
</div>
`;

exports[`<OverflowWrapper /> should render with correct color 1`] = `
.c0 {
  position: relative;
  overflow: hidden;
}

.c0:before,
.c0:after {
  position: absolute;
  top: 0;
  bottom: 0;
  display: block;
  width: 4rem;
  opacity: 0;
  -webkit-transition: opacity 0.3s linear;
  transition: opacity 0.3s linear;
  content: "";
  pointer-events: none;
  background: radial-gradient( ellipse at center, red 15%, rgba(255,0,0,0) 80% );
}

.c0:before {
  left: -2rem;
}

.c0:after {
  right: -2rem;
}

.c1 {
  overflow-x: auto;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      Red shadow color
    </div>
  </div>
</div>
`;
